# public/apidocs/swagger_v3.json
@@ -958,6 +958,22 @@
           }
         }
       },
+      "/v3/covid-19/vaccineStats": {
+        "get": {
+          "tags": [
+            "Covid-19 Vaccine"
+          ],
+          "summary": "Get vaccine stats phase vise from RAPS (Regulatory Affairs Professional Society). Specifically published by Jeff Craven at https://www.raps.org/news-and-articles/news-articles/2020/3/covid-19-vaccine-tracker",
+          "responses": {
+            "200": {
+              "description": "Status Ok",
+              "schema": {
+                "$ref": "#/definitions/vaccineStats"
+              }
+            }
+          }
+        }
+      },
       "/v3/influenza/cdc/ILINet": {
         "get": {
           "tags": [
@@ -1417,6 +1433,7 @@
             "type": "string"
           },
           "data": {
+            "type": "array",
             "items": {
               "$ref": "#/definitions/vaccine"
             }
@@ -1451,6 +1468,29 @@
             "items": {
               "type": "string"
             }
+          }
+        }
+      },
+      "vaccineData": {
+        "properties": {
+          "totalCandidates": {
+            "type": "string"
+          },
+          "phases": {
+            "type": "array",
+            "items": {
+              "$ref": "#/definitions/phases"
+            }
+          }
+        }
+      },
+      "phases": {
+        "properties": {
+          "phase": {
+            "type": "string"
+          },
+          "candidates": {
+            "type": "string"
           }
         }
       },
